fix: line breaks in `url` function

--- a/test/fixtures/url/url.css
+++ b/test/fixtures/url/url.css
@@ -301,7 +301,12 @@ a {
   background: url("./img img.png");
 }
 
+/* Comment */
+
 .class.class.class {
+  background: url('./img\
+(img.png');
+  background: url('./img\(img.png');
   background: url('./img\
 (img.png');
   background: url('./img\
